fixing alignment

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html, body {
   color:black;
   margin: 0px;
   padding: 0px;
+  text-align: center;
 }
 
 /* Navigation bar format */
